# AutoDDG-Enhanced

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Example_Search_Focused_Description.txt  Example_User_Focused_Description.txt  Prompt_LLM_Evaluation  Prompt_Search_Focused.txt  Prompt_Semantic_Enrichment_Analysis.txt  Prompt_User_Focused.txt  README.md  observations.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: pre-commit.yaml
autoddg/: __init__.py  data_process.py  evaluate.py  generate_description.py  generate_topic.py  search.py  utils.py  utils_rank.py
examples/: autoddg_experiment_results.csv  quick_start.ipynb  run_augmented.ipynb  test.ipynb
prompt-experiments/: autoddg_experiment_results.csv  datasets_summary.csv  experiment_runner.ipynb  prompts.py  utils.py
src/: __init__.py  data_process.py  evaluate.py  generate_description.py  generate_topic.py  search.py  utils.py  utils_rank.py
src/autoddg/: __init__.py  autoddg.py
src/autoddg/configurations/: prompts.yaml
src/autoddg/description/: __init__.py  generator.py  search.py
src/autoddg/evaluation/: __init__.py  base.py  openai.py
src/autoddg/profiling/: __init__.py  semantic.py  summary.py
src/autoddg/ranking/: __init__.py  metrics.py  qrels.py
src/autoddg/related/: ref.txt  related.py
src/autoddg/search/: __init__.py  engine.py
src/autoddg/topic/: __init__.py  generator.py
src/autoddg/utils/: __init__.py  descriptions.py  logging.py  prompts.py  sampling.py
